# rustle-tree

./: .env  .gitignore  CHALLENGE.md  Cargo.toml  Dockerfile.cli  Dockerfile.grpc-server  OVERVIEW.md  README.md  docker-compose.yml  run_operations.sh  test.sh
api_v1/: Cargo.toml  build.rs
api_v1/src/: README.md  client.rs  server.rs
api_v1/src/client/: README.md  lib.rs  main.rs
api_v1/src/proto/: rustle_tree.proto
cli/: Cargo.toml
cli/src/: README.md  main.rs
merkle/: Cargo.toml
merkle/src/: README.md  lib.rs
rustle_tree/: Cargo.toml
sample/: merkle_root_hash.txt
sample/merkle-proofs/: file0.txt  file1.txt  file2.txt  file3.txt
util/: Cargo.toml
util/src/: README.md  lib.rs
