[package]
name = "api_v1"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "grpc-server"
path = "src/server.rs"

[[bin]]
name = "grpc-client"
path = "src/client.rs"

[dependencies]
dotenv = "0.15"  # Replace "0.15" with the latest version if necessary
tonic = "0.11.0"
prost = "0.12"
tokio = { version = "1.37.0", features = ["full"] }
util = { path = "../util" }
merkle = { path = "../merkle"}

[build-dependencies]
tonic-build = "0.11.0"

