[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.10"
log = "0.4"
tonic = "0.6"
dotenv = "0.15"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }


util = { path = "../util" }
api_v1 = { path = "../api_v1"}
merkle = { path = "../merkle"}


serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"